src/test/deca/syntax/parser/invalid/decl_var_type_number.deca
// Parser test, type unavailable

{
    15 x = 5;
}